Add project's section

--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,17 @@
 @import url("https://fonts.googleapis.com/css2?family=Fraunces:ital,opsz,wght@0,9..144,100..900;1,9..144,100..900&family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap");
 
+@import url('https://fonts.googleapis.com/css2?family=Whisper&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 * {
     font-family: "Lato", serif;
+}
+
+.profile:hover {
+    transition: ease-in-out .2s;
+    filter: drop-shadow(0 0 1.75rem rgb(102, 189, 167));
+    border-color: rgba(102, 189, 167, 0.606);
 }
